[package]
name = "connect-rpc"
authors = ["diorzyon <https://github.com/diorzyon>"]
version = "1.0.0"
edition = "2021"
description = 'RPC methods for the template pallet'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = [
	"derive",
] }
#substrate dependencies
sp-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", default-features = false }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", default-features = false }
sp-runtime = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", default-features = false }

# local packages
connect-runtime-api = { path = "./runtime-api", default-features = false }

# other dependencies
jsonrpsee = { version = "0.16.2", features = ["server"] }
lazy_static = { version = "1.4.0", optional = true }
tokio = { version = "1.17.0", optional = true }
serde = "1.0.136"
serde_json = "1.0.85" #1.0.96

[dev-dependencies]
assert_matches = "1.3.0"
tokio = "1.17.0"
lazy_static = "1.4.0"
#substrate-test-runtime-client = { version = "2.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }



[features]
default = ["std"]
std = [
    "sp-api/std",
    "sp-runtime/std",
]
